test/libsolidity/syntaxTests/using/global_library_for_defined_elsewhere.sol
using L for L.S global;
library L {
    struct S { uint x; }
}
// ----
// TypeError 4117: (0-23): Can only use "global" with types defined in the same source unit at file level.
